test/extern/ferguson/externblock/syntax-error.good
In file included from <built-in>:#:
In file included from <command line>:#:
syntax-error.chpl:6:3: error: expected identifier or '('
  &&;
  ^
1 error generated.
error: error running clang on extern block
